deploy/model-registry/model-registry-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: model-registry-allow
  namespace: pokegen
spec:
  action: ALLOW
  rules:
  - {}
  selector:
    matchLabels:
      component: model-registry-server
